# osl-python-package

./: .pre-commit-config.yaml  .releaserc.json  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: main.yaml  release.yaml
conda/: dev.yaml
docs/: contributing.md  example.ipynb  index.md  installation.md  mkdocs.yaml
docs/api/: references.md  references.rst
src/osl_python_package/: __init__.py
tests/: __init__.py  test_osl_python_package.py
